# js.rs

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: autofix.yml
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/transpiler/: Cargo.toml
crates/transpiler/src/: context.rs  lib.rs  matcher.rs  nodes.rs
crates/transpiler/tests/: mod.rs
crates/transpiler/tests/fixtures/: basic.jsrs
crates/transpiler/tests/snapshots/: test.snap
patches/: tree-sitter.patch  tsup@8.3.0.patch
playground/: basic.jsrs  enum.jsrs  struct.jsrs
test/: language-server.test.ts  package.json  transpiler.test.ts
test/fixtures/: array-pattern.js  array-pattern.jsrs  array-pattern.ts  async-block.js  async-block.ts  async-fn.js  async-fn.jsrs  async-fn.mts  at-binding-pattern.js  at-binding-pattern.jsrs  at-binding-pattern.ts  await-expression.do.js  await-expression.jsrs  await-expression.ts  box-pattern.js  box-pattern.jsrs  box-pattern.mts  box-pattern.ts  break-expression.js  break-expression.jsrs  break-expression.mts  closure-expression.jsrs  closure-expression.mts  compound-assignment.js  compound-assignment.jsrs  compound-assignment.mts  const-block.js  const-block.jsrs  const-block.ts  const-fn.jsrs  const-fn.mts  const-item.js  const-item.jsrs  const-item.mts  const-item.ts  continue-expression.do.js  continue-expression.jsrs  continue-expression.mts  enum-item.do.js  enum-item.js  (+90 more)
