[package]
name = "jsrs_transpiler"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
syn = { workspace = true, features = ["full"] }
jsrs_parser = { workspace = true }
oxc_sourcemap = "1.0.7"
proc-macro2 = "1.0.93"
rustc-hash = "2.1.1"

[dev-dependencies]
insta = { version = "1.42.1", features = ["glob"] }
oxc = { version = "0.50.0", features = ["codegen"] }
